--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "cypress": "^12.15.0"
+    "cypress": "^12.15.0",
+    "json-server-auth": "^2.1.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.0.2"
